--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,17 +13,19 @@ set(REQ_CATKIN_PACKAGES
     visualization_msgs
     image_transport
     cv_bridge
-    arc_utilities)
+    arc_utilities
+        message_generation)
 
 find_package(catkin REQUIRED COMPONENTS ${REQ_CATKIN_PACKAGES} message_generation OPTIONAL_COMPONENTS pybind11_catkin)
 find_package(cmake_modules REQUIRED)
 find_package(Eigen3 REQUIRED)
-set(Eigen3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
 find_package(OpenCV REQUIRED)
 # MoveIt! isn't a required dependency
 find_package(moveit_msgs)
 find_package(moveit_core)
 find_package(moveit_ros_planning)
+find_package(arc_utilities REQUIRED)
+find_package(message_generation REQUIRED)
 
 catkin_python_setup()
 
@@ -81,6 +83,7 @@ endif()
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
+set(Eigen3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
 if(moveit_core_FOUND)
     include_directories(include SYSTEM
         ${catkin_INCLUDE_DIRS}
@@ -88,12 +91,14 @@ if(moveit_core_FOUND)
         ${OpenCV_INCLUDE_DIRS}
         ${moveit_core_INCLUDE_DIRS}
         ${moveit_msgs_INCLUDE_DIRS}
-        ${moveit_ros_planning_INCLUDE_DIRS})
+        ${moveit_ros_planning_INCLUDE_DIRS}
+            ${arc_utilities_INCLUDE_DIRS})
 else()
     include_directories(include SYSTEM
         ${catkin_INCLUDE_DIRS}
         ${Eigen3_INCLUDE_DIRS}
-        ${OpenCV_INCLUDE_DIRS})
+        ${OpenCV_INCLUDE_DIRS}
+            ${arc_utilities_INCLUDE_DIRS})
 endif()
 
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -flto -O3 -Wall -Wextra -Werror -Wshadow")
@@ -114,7 +119,8 @@ if(moveit_core_FOUND)
         ${catkin_LIBRARIES}
         ${moveit_core_LIBRARIES}
         ${moveit_msgs_LIBRARIES}
-        ${moveit_ros_planning_LIBRARIES})
+        ${moveit_ros_planning_LIBRARIES}
+        ${arc_utilities_LIBRARIES})
     # SDF generation node
     add_executable(sdf_generation_node src/sdf_generation_node.cpp)
     add_dependencies(sdf_generation_node
@@ -125,7 +131,8 @@ if(moveit_core_FOUND)
         ${PROJECT_NAME}
         ${moveit_core_LIBRARIES}
         ${moveit_msgs_LIBRARIES}
-        ${moveit_ros_planning_LIBRARIES})
+        ${moveit_ros_planning_LIBRARIES}
+            ${arc_utilities_LIBRARIES})
     # Headers
     add_custom_target(${PACKAGE_NAME}_headers SOURCES
         include/${PROJECT_NAME}/collision_map.hpp
@@ -147,7 +154,8 @@ else()
         ${catkin_EXPORTED_TARGETS}
         ${PROJECT_NAME}_gencpp)
     target_link_libraries(${PROJECT_NAME}
-        ${catkin_LIBRARIES})
+        ${catkin_LIBRARIES}
+            ${arc_utilities_LIBRARIES})
     # Headers
     add_custom_target(${PACKAGE_NAME}_headers SOURCES
         include/${PROJECT_NAME}/collision_map.hpp
@@ -159,25 +167,30 @@ endif()
 # Simple test nodes for voxel_grid
 add_executable(voxel_grid_test src/test_voxel_grid.cpp)
 add_dependencies(voxel_grid_test ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-target_link_libraries(voxel_grid_test ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(voxel_grid_test ${catkin_LIBRARIES} ${PROJECT_NAME}
+        ${arc_utilities_LIBRARIES})
 
 add_executable(estimate_distance_test src/estimate_distance_test.cpp)
 add_dependencies(estimate_distance_test ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-target_link_libraries(estimate_distance_test ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(estimate_distance_test ${catkin_LIBRARIES} ${PROJECT_NAME}
+        ${arc_utilities_LIBRARIES})
 
 add_executable(compute_convex_segments_test src/compute_convex_segments_test.cpp)
 add_dependencies(compute_convex_segments_test ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-target_link_libraries(compute_convex_segments_test ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(compute_convex_segments_test ${catkin_LIBRARIES} ${PROJECT_NAME}
+        ${arc_utilities_LIBRARIES})
 
 # Image to SDF node
 add_executable(image_2d_sdf_node src/image_2d_sdf_node.cpp)
 add_dependencies(image_2d_sdf_node ${catkin_EXPORTED_TARGETS})
-target_link_libraries(image_2d_sdf_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(image_2d_sdf_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}
+        ${arc_utilities_LIBRARIES})
 
 # Tutorial on how to use the components of the sdf_tools library
 add_executable(sdf_tools_tutorial src/sdf_tools_tutorial.cpp)
 add_dependencies(sdf_tools_tutorial ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-target_link_libraries(sdf_tools_tutorial ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(sdf_tools_tutorial ${catkin_LIBRARIES} ${PROJECT_NAME}
+        ${arc_utilities_LIBRARIES})
 
 
 #####################
@@ -186,5 +199,6 @@ target_link_libraries(sdf_tools_tutorial ${catkin_LIBRARIES} ${PROJECT_NAME})
 
 if (SDF_TOOLS_PYTHON_BINDINGS)
     pybind_add_module(pysdf_tools src/sdf_tools/bindings.cpp)
-    target_link_libraries(pysdf_tools PUBLIC sdf_tools)
+    target_link_libraries(pysdf_tools PUBLIC sdf_tools
+            ${arc_utilities_LIBRARIES})
 endif()
