--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>sdf_tools</name>
-  <version>0.0.1</version>
+  <version>0.0.2</version>
   <description>Builds 2D signed distance fields from images, 3D signed distance fields from MoveIt PlanningScene/Octomap, provides a lightweight signed distance field library, message types for signed distance fields, and tools to compress signed distance fields for transport and storage.</description>
   <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
   <license>BSD</license>
@@ -34,7 +34,7 @@
   <run_depend>moveit_ros_planning</run_depend>
   <run_depend>arc_utilities</run_depend>
   <run_depend>message_runtime</run_depend>
-
+  <run_depend>message_generation</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
