--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,17 +9,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-set(REQ_CATKIN_PACKAGES
-    rospy
-    std_msgs
-    sensor_msgs
-    visualization_msgs
-    image_transport
-    cv_bridge
-    arc_utilities
-        message_generation)
-
-find_package(catkin REQUIRED COMPONENTS ${REQ_CATKIN_PACKAGES} OPTIONAL_COMPONENTS pybind11_catkin)
+find_package(catkin REQUIRED COMPONENTS rospy std_msgs sensor_msgs visualization_msgs image_transport cv_bridge message_generation arc_utilities)
 #find_package(cmake_modules REQUIRED)
 find_package(Eigen3 REQUIRED)
 set(Eigen3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
@@ -28,33 +18,26 @@ find_package(OpenCV REQUIRED)
 find_package(moveit_msgs)
 find_package(moveit_core)
 find_package(moveit_ros_planning)
-find_package(arc_utilities REQUIRED)
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/groovy/api/catkin/html/user_guide/setup_dot_py.html
-catkin_python_setup()
+#catkin_python_setup()
 
 #######################################
 ## Declare ROS messages and services ##
 #######################################
 
 ## Generate messages in the 'msg' folder
-add_message_files(DIRECTORY msg FILES
-    SDF.msg
-    CollisionMap.msg
-    TaggedObjectCollisionMap.msg)
+add_message_files(DIRECTORY msg FILES SDF.msg CollisionMap.msg TaggedObjectCollisionMap.msg)
 
 ## Generate services in the 'srv' folder
-add_service_files(DIRECTORY srv FILES
-    ComputeSDF.srv)
+add_service_files(DIRECTORY srv FILES ComputeSDF.srv)
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(DEPENDENCIES
-    geometry_msgs
-    std_msgs)
+generate_messages(DEPENDENCIES geometry_msgs std_msgs)
 
 ###################################
 ## catkin specific configuration ##
@@ -65,16 +48,14 @@ generate_messages(DEPENDENCIES
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 if(moveit_core_FOUND)
-    catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} CATKIN_DEPENDS rospy std_msgs sensor_msgs moveit_core moveit_ros_planning visualization_msgs moveit_msgs image_transport cv_bridge message_runtime DEPENDS Eigen3 OpenCV)
+    catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} CATKIN_DEPENDS rospy std_msgs sensor_msgs visualization_msgs image_transport cv_bridge message_runtime DEPENDS Eigen3 OpenCV arc_utilities moveit_core moveit_ros_planning moveit_msgs)
 else()
-    catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} CATKIN_DEPENDS rospy std_msgs sensor_msgs visualization_msgs image_transport cv_bridge message_runtime DEPENDS Eigen3 OpenCV)
+    catkin_package(INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} CATKIN_DEPENDS rospy std_msgs sensor_msgs visualization_msgs image_transport cv_bridge message_runtime DEPENDS Eigen3 OpenCV arc_utilities)
 endif()
 
 ###########
 ## Build ##
 ###########
-
-#link_directories($ENV{HOME}/tool_ws/devel/lib)
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
@@ -83,63 +64,50 @@ include_directories(include
         ${catkin_INCLUDE_DIRS}
         ${Eigen3_INCLUDE_DIRS}
         ${OpenCV_INCLUDE_DIRS}
-    ${arc_utilities_INCLUDE_DIRS})
+    ${arc_utilities_INCLUDE_DIRS}
+#        $ENV{HOME}/planner_ws/src/Fast-Planner/plan_env/ThirdParty/arc_utilities/include
+)
 if(moveit_core_FOUND)
     include_directories(
             ${moveit_core_INCLUDE_DIRS}
             ${moveit_msgs_INCLUDE_DIRS}
-            ${moveit_ros_planning_INCLUDE_DIRS}
-            ${arc_utilities_INCLUDE_DIRS})
+            ${moveit_ros_planning_INCLUDE_DIRS})
 endif()
 
 if(moveit_core_FOUND)
     message(STATUS "MoveIt! found. Building SDF Tools library with MoveIt! integration.")
     # SDF library
     add_library(${PROJECT_NAME}
-            include/${PROJECT_NAME}/collision_map.hpp
-            include/${PROJECT_NAME}/tagged_object_collision_map.hpp
-            include/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.hpp
-            include/${PROJECT_NAME}/sdf.hpp
-            include/${PROJECT_NAME}/sdf_builder.hpp
-            src/${PROJECT_NAME}/collision_map.cpp
-            src/${PROJECT_NAME}/tagged_object_collision_map.cpp
-            src/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.cpp
-            src/${PROJECT_NAME}/sdf.cpp
-            src/${PROJECT_NAME}/sdf_builder.cpp)
+        include/${PROJECT_NAME}/collision_map.hpp
+        include/${PROJECT_NAME}/tagged_object_collision_map.hpp
+        include/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.hpp
+        include/${PROJECT_NAME}/sdf.hpp
+        include/${PROJECT_NAME}/sdf_builder.hpp
+        src/${PROJECT_NAME}/collision_map.cpp
+        src/${PROJECT_NAME}/tagged_object_collision_map.cpp
+        src/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.cpp
+        src/${PROJECT_NAME}/sdf.cpp
+        src/${PROJECT_NAME}/sdf_builder.cpp)
     add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-    target_link_libraries(${PROJECT_NAME}
-            ${catkin_LIBRARIES}
-            ${moveit_core_LIBRARIES}
-            ${moveit_msgs_LIBRARIES}
-            ${moveit_ros_planning_LIBRARIES}
-        ${arc_utilities_LIBRARIES})
-
+    target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${moveit_core_LIBRARIES} ${moveit_msgs_LIBRARIES} ${moveit_ros_planning_LIBRARIES})
     # SDF generation node
     add_executable(sdf_generation_node src/sdf_generation_node.cpp)
     add_dependencies(sdf_generation_node ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-    target_link_libraries(sdf_generation_node
-            ${catkin_LIBRARIES}
-            ${PROJECT_NAME}
-            ${moveit_core_LIBRARIES}
-            ${moveit_msgs_LIBRARIES}
-            ${moveit_ros_planning_LIBRARIES}
-            ${arc_utilities_LIBRARIES})
+    target_link_libraries(sdf_generation_node ${catkin_LIBRARIES} ${PROJECT_NAME} ${moveit_core_LIBRARIES} ${moveit_msgs_LIBRARIES} ${moveit_ros_planning_LIBRARIES})
 else()
     message(STATUS "MoveIt! not found. Building SDF Tools library without MoveIt! integration.")
     # SDF library
     add_library(${PROJECT_NAME}
-            include/${PROJECT_NAME}/collision_map.hpp
-            include/${PROJECT_NAME}/tagged_object_collision_map.hpp
-            include/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.hpp
-            include/${PROJECT_NAME}/sdf.hpp
-            src/${PROJECT_NAME}/collision_map.cpp
-            src/${PROJECT_NAME}/tagged_object_collision_map.cpp
-            src/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.cpp
-            src/${PROJECT_NAME}/sdf.cpp)
+        include/${PROJECT_NAME}/collision_map.hpp
+        include/${PROJECT_NAME}/tagged_object_collision_map.hpp
+        include/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.hpp
+        include/${PROJECT_NAME}/sdf.hpp
+        src/${PROJECT_NAME}/collision_map.cpp
+        src/${PROJECT_NAME}/tagged_object_collision_map.cpp
+        src/${PROJECT_NAME}/dynamic_spatial_hashed_collision_map.cpp
+        src/${PROJECT_NAME}/sdf.cpp)
     add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencpp)
-    target_link_libraries(${PROJECT_NAME}
-            ${catkin_LIBRARIES}
-            ${arc_utilities_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 endif()
 
 # Simple test node for voxel_grid
@@ -163,13 +131,17 @@ endif()
 
 ## Mark library for installation
 install(TARGETS ${PROJECT_NAME}
-        #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-        ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/lib
-        RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib
-        LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib
+        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#  ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/lib
+        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib
+        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#  LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib
 )
+
 ## Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/
-        PATTERN ".svn" EXCLUDE
+        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#  DESTINATION ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/
+  PATTERN ".svn" EXCLUDE
 )
