[Update] Install package manually

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,17 +131,17 @@ endif()
 
 ## Mark library for installation
 install(TARGETS ${PROJECT_NAME}
-        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#  ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/lib
-        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-#  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib
-        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#  LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib
+#        ARCHIVE DESTINATION /opt/ros/noetic/lib/
+  ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/lib
+#        RUNTIME DESTINATION /opt/ros/noetic/bin/
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib
+#        LIBRARY DESTINATION /opt/ros/noetic/lib/
+  LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib
 )
 
 ## Mark cpp header files for installation
 install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#  DESTINATION ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/
+#        /opt/ros/noetic/include/
+  DESTINATION ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/
   PATTERN ".svn" EXCLUDE
 )
