--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0"?>
 <package>
   <name>sdf_tools</name>
-  <version>0.0.1</version>
-  <description>Builds 2D signed distance fields from images, 3D signed distance fields from MoveIt PlanningScene/Octomap, provides a lightweight signed distance field library, message types for signed distance fields, and tools to compress signed distance fields for transport and storage.</description>
-  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
-  <license>BSD</license>
+  <version>1.0.0</version>
+  <description>
+    Builds 2D signed distance fields from images, 3D signed distance fields from MoveIt PlanningScene/Octomap, provides a lightweight signed distance field library, message types for signed distance fields, and tools to compress signed distance fields for transport and storage.
+  </description>
+  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
+  <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
