--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,9 @@
   <description>
     Builds 2D signed distance fields from images, 3D signed distance fields from MoveIt PlanningScene/Octomap, provides a lightweight signed distance field library, message types for signed distance fields, and tools to compress signed distance fields for transport and storage.
   </description>
-  <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
+
+  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
+
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
